...
    "tab.trip": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Trip"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "行程"
...
    "tab.ask": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Ask"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "问熊猫"
...
    "tab.explore": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Explore"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "探索"
...
    "tab.profile": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "我的"
...
    },
    "tab.vp": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "VP"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "VP"
...
    },
    "tab.journeys": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Journeys"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "旅程"
...
    },
    "tab.library": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "资源库"
...
    },
    "tab.memory": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Memory"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Memory"
...
